# Rendering_Testing_for_backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: ticker.py  zerodha_client.py
app/: main.py
app/application/service/: auth_service.py  position_service.py
app/domain/entities/: broker_connection.py  positions.py  refresh_token.py  user.py
app/domain/interfaces/: positions_repo.py  refresh_token_repo.py  user_repo.py
app/domain/repositories/: broker_connection_repo.py  user_repo.py
app/infrastructure/: jwt_service.py  security.py  settings.py
app/infrastructure/database/: connection.py
app/infrastructure/db/: database.py  dependency.py
app/infrastructure/dependencies/: auth.py  services.py
app/infrastructure/postgres/: broker_connection_repo.py  position_repo.py  refresh_token_repo.py  user_repo.py
app/presentation/api/: auth_router.py  position_routes.py
app/presentation/schemas/: auth_schemas.py  position_schema.py
database/: Init.sql  database.py  models.py
migrations/: schemas.sql
tests/: conftest.py  test_db_connection.py
tests/integration/: test_full_auth_flow.py
